[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["karim-suzon <ak.suzon@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
